2000-02-26  Per Bothner  <per@bothner.com>

	* Pair.java (equals(Pair,Pair)):  Generalize to handle null.

2000-02-19  Per Bothner  <per@bothner.com>

	* FVector.java (makeLiteral):  Update unqualified package name.

2000-01-24  Per Bothner  <per@bothner.com>

	* FVector.java (setAll):  New method.

2000-01-22  Per Bothner  <per@bothner.com>

	* LList.java (list4, chain1, chain4):  New static methods.

1999-12-10  Per Bothner  <per@bothner.com>

	New directory.
	* Sequence.java, Pair.java, PairWithPosition.java, FString.java,
	Char.java:  Moved from kawa/lang.
	* LList.java:  Renamed from kawa/lang/List.java.
	* FVector.java:  Renamed from kawa/lang/Vector.java.
	* Makefile.am, Makefile.in:  New files.

	* UniformVector.java:  New abstract class.
	* S8Vector.java, S16Vector.java, S32Vector.java, S64Vector.java,
	U8Vector.java, U16Vector.java, U32Vector.java, U64Vector.java,
	F32Vector.java, F64Vctor.java:  New uniform vector classes.

	* Most classes (elementAt):  Renamed to, as in Java 2 collections.
	* Char.java (nameToChar):  New method.