@@ -1,3 +1,11 @@
+2000-03-12  Per Bothner  <per@bothner.com>
+
+	* UniformVector.java (setAll):  New method.
+	* FVector.java: Extend UniformVector, rather than Sequence directly.
+	(set):  Subsumed by version in Unifromvector.
+	* FString.java: Extend UniformVector, rather than Sequence directly.
+	(setElementAt, setAll):  New methods.
+
 2000-02-26  Per Bothner  <per@bothner.com>
 
 	* Pair.java (equals(Pair,Pair)):  Generalize to handle null.
